--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-image: url("/bg.jpg");
-  background-size: cover;
+  background: linear-gradient(rgba(61, 61, 61, 0.5), rgba(61, 61, 61, 0.5)),
+    url("/bg.jpg") no-repeat center center/cover;
 }
