--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 body {
   width: 100vw;
   height: 100vh;
+}
+#root {
+  width: 100vw;
+  height: 100vh;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
