--- a/src/index.css
+++ b/src/index.css
@@ -14,67 +14,29 @@ body {
 .slider {
   width: 100vw;
   height: 100vh; /* Adjust height as needed */
-  overflow: hidden;
-  position: relative;
-  background: #000; /* Default black background */
-}
-
-/* Image styles */
-.slider img {
-  width: 100%;
-  height: 100%; /* Adjust height as needed */
-  object-fit: cover; /* Ensures the image covers the entire container */
-  object-position: center; /* Centers the image within the container */
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0; /* Start images hidden */
-  animation: fadeInOutWithBlack 24s infinite;
-  z-index: 1;
+  background-position: center;
+  background-size: 100% 100%;
+  animation: slide 24s linear infinite;
 }
 
 /* Animation keyframes */
-@keyframes fadeInOutWithBlack {
+@keyframes slide {
   0% {
-    opacity: 0;
-  } /* Hidden */
-  10% {
-    opacity: 1;
-  } /* Fade in */
-  30% {
-    opacity: 1;
-    scale: 1.06;
-  } /* Stay visible */
+    background-image: url("/1.jpg");
+  }
+  20% {
+    background-image: url("/2.jpg");
+  }
   40% {
-    opacity: 0;
-  } /* Fade out */
-  50% {
-    opacity: 0;
-  } /* Black screen */
+    background-image: url("/3.jpg");
+  }
+  60% {
+    background-image: url("/4.jpg");
+  }
+  80% {
+    background-image: url("/5.jpg");
+  }
   100% {
-    opacity: 0;
-  } /* Hidden */
-}
-
-/* Delay each image for proper sequencing */
-.slider img:nth-child(1) {
-  animation-delay: 0s;
-}
-.slider img:nth-child(2) {
-  animation-delay: 4s;
-}
-.slider img:nth-child(3) {
-  animation-delay: 8s;
-}
-.slider img:nth-child(4) {
-  animation-delay: 12s;
-}
-.slider img:nth-child(5) {
-  animation-delay: 16s;
-}
-.slider img:nth-child(6) {
-  animation-delay: 20s;
-}
-.slider img:nth-child(7) {
-  animation-delay: 24s;
+    background-image: url("/6.jpg");
+  }
 }
